<?xml version="1.0"?>
<package format="3">
  <name>cloudwatch_metrics_collector</name>
  <version>3.0.0</version>
  <description>Subscriber node for the aws/monitoring topic to publish metrics to AWS Cloudwatch</description>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>aws_common</build_depend>
  <build_depend>aws_ros2_common</build_depend>
  <build_depend>cloudwatch_metrics_common</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>ros_monitoring_msgs</build_depend>
  
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>aws_common</exec_depend>
  <exec_depend>aws_ros2_common</exec_depend>
  <exec_depend>cloudwatch_metrics_common</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>ros_monitoring_msgs</exec_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
